--- a/testwork/changer.ui
+++ b/testwork/changer.ui
@@ -6,24 +6,112 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>565</width>
-    <height>428</height>
+    <width>742</width>
+    <height>20</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>20</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="image_label">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>76</x>
-     <y>32</y>
-     <width>421</width>
-     <height>301</height>
+     <x>10</x>
+     <y>0</y>
+     <width>47</width>
+     <height>16</height>
     </rect>
    </property>
+   <property name="maximumSize">
+    <size>
+     <width>167</width>
+     <height>16</height>
+    </size>
+   </property>
    <property name="text">
-    <string>Image</string>
+    <string>Degree X:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_degree_x">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>0</y>
+     <width>47</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_degree_y">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>0</y>
+     <width>47</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>0</y>
+     <width>47</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>167</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>Degree Y:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>0</y>
+     <width>201</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>300</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>MAX Degrees X: 90 MAX Degrees Y:90</string>
    </property>
   </widget>
  </widget>
