--- a/testwork/changer.ui
+++ b/testwork/changer.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>742</width>
-    <height>20</height>
+    <height>52</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>20</height>
+    <height>60</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>0</y>
+     <y>30</y>
      <width>47</width>
      <height>16</height>
     </rect>
@@ -42,7 +42,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>0</y>
+     <y>30</y>
      <width>47</width>
      <height>16</height>
     </rect>
@@ -61,7 +61,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>0</y>
+     <y>30</y>
      <width>47</width>
      <height>16</height>
     </rect>
@@ -80,7 +80,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>0</y>
+     <y>30</y>
      <width>47</width>
      <height>16</height>
     </rect>
@@ -99,7 +99,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>0</y>
+     <y>30</y>
      <width>201</width>
      <height>16</height>
     </rect>
@@ -112,6 +112,22 @@
    </property>
    <property name="text">
     <string>MAX Degrees X: 90 MAX Degrees Y:90</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_error">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>10</y>
+     <width>281</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
