--- a/testwork/manager.ui
+++ b/testwork/manager.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>736</width>
-    <height>702</height>
+    <width>640</width>
+    <height>650</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>650</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>640</width>
+    <height>659</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -38,57 +50,30 @@
     <string>TextLabel</string>
    </property>
   </widget>
-  <widget class="QWidget" name="horizontalLayoutWidget">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>495</y>
-     <width>293</width>
-     <height>18</height>
+     <x>0</x>
+     <y>500</y>
+     <width>641</width>
+     <height>61</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="maximumSize">
-       <size>
-        <width>16777</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>Enter the angle size in degrees:</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="degree">
-      <property name="maximumSize">
-       <size>
-        <width>900</width>
-        <height>16</height>
-       </size>
-      </property>
-     </widget>
-    </item>
-   </layout>
+   <layout class="QVBoxLayout" name="verticalLayout_3"/>
   </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>510</y>
-     <width>160</width>
-     <height>93</height>
+     <x>170</x>
+     <y>560</y>
+     <width>281</width>
+     <height>91</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="sizeConstraint">
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_3"/>
-    </item>
     <item>
      <widget class="QPushButton" name="up_button">
       <property name="text">
@@ -118,6 +103,41 @@
      <widget class="QPushButton" name="button_open">
       <property name="text">
        <string>Down</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>500</y>
+     <width>301</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="maximumSize">
+       <size>
+        <width>16777</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Enter the angle size in degrees:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="degree">
+      <property name="maximumSize">
+       <size>
+        <width>900</width>
+        <height>16</height>
+       </size>
       </property>
      </widget>
     </item>
